--- a/build.yaml
+++ b/build.yaml
@@ -18,3 +18,10 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+include:
+  - board: nice_nano_v2
+    shield: flakem_diy
+  - board: nice_nano_v2
+    shield: nice_nano_v2
+  - board: nice_nano_v2
+    shield: settings_reset
