--- a/build.yaml
+++ b/build.yaml
@@ -19,9 +19,9 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano@2.0.0
     shield: flakem_diy
-  - board: nice_nano_v2
+  - board: nice_nano@2.0.0
     shield: nice_nano_v2
-  - board: nice_nano_v2
+  - board: nice_nano@2.0.0
     shield: settings_reset
