fix type in shield dtsi

--- a/boards/shields/flakem_diy/flakem_diy.dtsi
+++ b/boards/shields/flakem_diy/flakem_diy.dtsi
@@ -13,7 +13,7 @@
         zmk,physical-layout = &default_layout;
     };
 
-    kscan0: kscan0 {
+    kscan0: kscan {
         compatible = "zmk,kscan-gpio-matrix";
         diode-direction = "col2row";
         wakeup-source;
