--- a/build.yaml
+++ b/build.yaml
@@ -21,6 +21,7 @@
 include:
   - board: nice_nano@2.0.0
     shield: flakem_diy_left
+    snippet: studio-rpc-usb-uart
   - board: nice_nano@2.0.0
     shield: flakem_diy_right
   - board: nice_nano@2.0.0
