--- a/boards/shields/flakem_diy/flakem_diy.conf
+++ b/boards/shields/flakem_diy/flakem_diy.conf
@@ -25,3 +25,8 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_KEYBOARD_NAME="FlakeM DIY"
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+
+CONFIG_ZMK_POINTING=y
+
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
